re-build to monolith